Refactor: QueryDSL Projection을 Projections.constructor에서 @QueryProjection 방식으로 변경